hphp/hack/test/typecheck/reactive/mutable_or_immutable5.php
<?hh // strict

class A {
  // ERROR: function must be reactive
  public function f(<<__MaybeMutable>>A $a): int {
    return 1;
  }
}
